--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
     data-bs-spy="scroll"
     data-bs-target="#navScroll"
   >
+    <section class="section-preloader center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="100"
+        height="100"
+        fill="black"
+        class="bi bi-stack"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="m14.12 10.163 1.715.858c.22.11.22.424 0 .534L8.267 15.34a.598.598 0 0 1-.534 0L.165 11.555a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.66zM7.733.063a.598.598 0 0 1 .534 0l7.568 3.784a.3.3 0 0 1 0 .535L8.267 8.165a.598.598 0 0 1-.534 0L.165 4.382a.299.299 0 0 1 0-.535L7.733.063z"
+        />
+        <path
+          d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.598.598 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.659z"
+        />
+      </svg>
+      <span class="span-devfalls">DevFalls</span>
+    </section>
+
     <header>
       <nav
         id="navScroll"
@@ -1353,12 +1372,11 @@
       </div> -->
       <div class="container text-center small py-vh-2 border-top border-dark">
         ©2024 Diseñado y Desarrollado por
-        <a href="index.html" class="link-fancy link-fancy-light"
-          >DevFalls</a
-        >
+        <a href="index.html" class="link-fancy link-fancy-light">DevFalls</a>
       </div>
     </footer>
 
+    <script src="js/index.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.js"></script>
     <script>
