--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         width="100"
         height="100"
         fill="black"
-        class="bi bi-stack"
+        class="bi bi-stack svg-icon"
         viewBox="0 0 16 16"
       >
         <path
